force-app/main/default/objects/CPR_Event__c/CPR_Event__c.object-meta.xml
<CustomObject>
    <label>CPR Event</label>
    <nameField>
        <displayFormat>CE-{00000}</displayFormat>
        <label>CPR Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPR Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>