force-app/main/default/objects/CPR_Event__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AddressChange</fullName>
            </value>
            <value>
                <fullName>NameChange</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Death_A21</fullName>
            </value>
            <value>
                <fullName>Revert_A25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>