force-app/main/default/objects/CPR_Event__c/fields/CPR_File_Run__c.field-meta.xml
<CustomField>
    <fullName>CPR_File_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPR File Run</label>
    <referenceTo>CPR_File_Run__c</referenceTo>
    <relationshipLabel>CPR Events</relationshipLabel>
    <relationshipName>CPR_Events</relationshipName>
    <type>Lookup</type>
</CustomField>