force-app/main/default/objects/CPR_Event__c/fields/CPR_From_File__c.field-meta.xml
<CustomField>
    <fullName>CPR_From_File__c</fullName>
    <label>CPR (From File)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>