force-app/main/default/objects/CPR_Event__c/fields/Details_Raw__c.field-meta.xml
<CustomField>
    <fullName>Details_Raw__c</fullName>
    <label>Details Raw</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>