force-app/main/default/objects/CPR_Event__c/fields/Event_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Event_Datetime__c</fullName>
    <label>Event Date/Time</label>
    <type>DateTime</type>
</CustomField>