force-app/main/default/objects/CPR_Event__c/fields/Event_Key__c.field-meta.xml
<CustomField>
    <fullName>Event_Key__c</fullName>
    <externalId>true</externalId>
    <label>Event Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>