force-app/main/default/objects/CPR_Event__c/fields/New_FirstName__c.field-meta.xml
<CustomField>
    <fullName>New_FirstName__c</fullName>
    <label>New FirstName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>