force-app/main/default/objects/CPR_Event__c/fields/New_FullName__c.field-meta.xml
<CustomField>
    <fullName>New_FullName__c</fullName>
    <label>New FullName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>