force-app/main/default/objects/CPR_Event__c/fields/New_LastName__c.field-meta.xml
<CustomField>
    <fullName>New_LastName__c</fullName>
    <label>New LastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>