force-app/main/default/objects/CPR_Event__c/fields/New_MailingCity__c.field-meta.xml
<CustomField>
    <fullName>New_MailingCity__c</fullName>
    <label>New MailingCity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>