force-app/main/default/objects/CPR_Event__c/fields/New_MailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>New_MailingPostalCode__c</fullName>
    <label>New MailingPostalCode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>