force-app/main/default/objects/CPR_Event__c/fields/New_MailingStreet__c.field-meta.xml
<CustomField>
    <fullName>New_MailingStreet__c</fullName>
    <label>New MailingStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>