force-app/main/default/objects/CPR_Event__c/fields/New_MiddleNames__c.field-meta.xml
<CustomField>
    <fullName>New_MiddleNames__c</fullName>
    <label>New MiddleNames</label>
    <length>120</length>
    <type>Text</type>
</CustomField>