force-app/main/default/objects/CPR_Event__c/fields/Raw_Record__c.field-meta.xml
<CustomField>
    <fullName>Raw_Record__c</fullName>
    <label>Raw Record</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>