force-app/main/default/objects/CPR_Event__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <label>Status Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>