force-app/main/default/objects/CPR_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>CPR_From_File__c</columns>
    <columns>CPR_File_Run__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Event_Code__c</columns>
    <columns>Is_Handled__c</columns>
    <columns>Raw_Record__c</columns>
    <columns>Status_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>